--- a/Aston_VasilevVV_maven/pom.xml
+++ b/Aston_VasilevVV_maven/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.22.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
